# celery

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  init_db_script.sql  pyproject.toml
assets/materials/: basic.md  conclusions.md  homework.md  integration.md  overview.md  workloads.md
docker/tasks-app/: Dockerfile
docker/tests/: Dockerfile
src/: celery.py  db.py  main.py
src/source_code_initial/django_celery/: settings.py
src/source_code_initial/feedback/: forms.py
src/source_code_initial/feedback/templates/feedback/: feedback.html  success.html
src/templates/: task_created.html  task_form.html  task_status.html
tests/: test_user_task.py
