[tool.poetry]
name = "python-ab2-hw-async-integration-ilystsov"
version = "0.1.0"
description = ""
authors = ["ilya <lystsov.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
celery = "^5.3.6"
redis = "^5.0.3"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
